# backend/Router/ping.go
@@ -1,20 +1,0 @@
-package Router
-
-import "github.com/gin-gonic/gin"
-
-// PingExample godoc
-// @Summary ping example
-// @Description do ping
-// @Tags example
-// @Accept json
-// @Produce json
-// @Success 200 {string} string "pong"
-// @Failure 400 {string} string "ok"
-// @Failure 404 {string} string "ok"
-// @Failure 500 {string} string "ok"
-// @Router /api/ping [get]
-func ping(c *gin.Context) {
-	c.JSON(200, gin.H{
-		"message": "pong",
-	})
-}
